Enable Guava Tests, Clean pom for additional opens on testing for JAX-RS, Re-enable Joda and Guava modules in tests Update travis yaml for install test (JLink run)